Revety navbar layout to standard, use bootstrap variable to prevent collapsing.

--- a/assets/styles/chat.css
+++ b/assets/styles/chat.css
@@ -71,22 +71,3 @@ body
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
-
-
-/// Trying to disable navbar collapse.
-
-.navbar-collapse.collapse {
-display: block!important;
-}
-
-.navbar-nav>li, .navbar-nav {
-float: left !important;
-}
-
-.navbar-nav.navbar-right:last-child {
-margin-right: -15px !important;
-}
-
-.navbar-right {
-float: right!important;
-}
